--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="scripts/helper.js"></script>
     <script defer src="scripts/scripts.js"></script>
     <script defer src="scripts/store.js"></script>
     <title>balloon clicker</title>
   </head>
-  <body>
+  <body class="flex--center">
     <div class="screen">
       <div class="game">
+        <!-- |=======[ BALLOON GRID ]=======|  -->
         <div class="balloon-grid"></div>
 
+        <!-- |=======[ STORE ]=======|  -->
         <div class="store hidden">
           <p class="store-title text--center">loja</p>
           <div class="store-stats">
@@ -24,13 +27,15 @@
             <button class="btn store-buy-btn">mais dano</button>
             <span class="store-price">15</span>
           </div>
-          <button class="btn close-store-btn">x</button>
+
+          <button class="btn flex--center" id="btn--close-store">x</button>
         </div>
       </div>
+      <!-- |=======[ HOTBAR ]=======|  -->
       <div class="hotbar">
         <div class="hotbar-buttons">
-          <button class="store-btn hotbar-btn btn">loja</button>
-          <button class="store-btn hotbar-btn btn">status</button>
+          <button class="btn hotbar-btn" id="btn--open-store">loja</button>
+          <button class="btn hotbar-btn">status</button>
         </div>
         <pre class="hotbar-logo">
  ____    ____  _      _       ___    ___   ____          __  _      ____   __  __  _    ___  ____  
@@ -42,7 +47,7 @@
 |_____||__|__||_____||_____| \___/  \___/ |__|__|     \____||_____||____\____||__|\_||_____||__|\_|
                                                                                                    </pre
         >
-        <p>feito por lime lol</p>
+        <p class="hotbar-credits">feito por lime lol</p>
       </div>
     </div>
   </body>
