--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
         <!-- |=======[ STORE ]=======|  -->
         <div class="store hidden">
           <p class="store-title text--center">loja</p>
+
+          <!-- |=======[ PLAYER STATS ]=======|  -->
           <div class="store-stats">
-            <p>ouro: <span class="stats-gold">0</span></p>
-            <p>dano atual: <span class="stats-damage">1</span></p>
+            <p>ouro: <span id="stats-gold">0</span></p>
+            <p>dano atual: <span id="stats-damage">1</span></p>
+            <p>dano em área: <span id="stats-areaDamage">0</span></p>
           </div>
 
-          <div class="store-item">
-            <button class="btn store-buy-btn">mais dano</button>
-            <span class="store-price">15</span>
+          <div class="store-upgrades">
+            <div class="store-upgrade">
+              <button class="btn store-buy-btn" data-upgrade="moreDamage">
+                mais dano
+              </button>
+              <span class="store-price">15</span>
+            </div>
+
+            <div class="store-upgrade">
+              <button class="btn store-buy-btn" data-upgrade="areaDamage">
+                dano em área
+              </button>
+              <span class="store-price">20</span>
+            </div>
           </div>
 
           <button class="btn flex--center" id="btn--close-store">x</button>
